COMS4115-PLT/ap++/parser.output
   0  $accept : %entry% $end

   1  program :
   2          | program func_decl

   3  func_decl : ID LPAREN func_params_opt RPAREN LBRACE stmt_list RBRACE

   4  func_params_opt :
   5                  | func_params_list

   6  func_params_list : var_type ID
   7                   | func_params_list COMMA var_type ID

   8  stmt_list :
   9            | stmt_list stmt

  10  stmt : expr SEMICOLON
  11       | RETURN expr_opt SEMICOLON
  12       | BREAK SEMICOLON
  13       | CONTINUE SEMICOLON
  14       | LBRACE stmt_list RBRACE
  15       | IF LPAREN expr RPAREN stmt
  16       | IF LPAREN expr RPAREN stmt ELSE stmt
  17       | WHILE LPAREN expr RPAREN stmt
  18       | var_type ID ASN expr SEMICOLON

  19  var_type : INT
  20           | BOOL
  21           | list_type

  22  list_type : INT_LIST
  23            | BOOL_LIST

  24  expr_opt :
  25           | expr

  26  expr : expr PLUS expr
  27       | expr MINUS expr
  28       | expr TIMES expr
  29       | expr DIVIDE expr
  30       | expr MOD expr
  31       | PLUSPLUS ID
  32       | ID PLUSPLUS
  33       | MINUSMINUS ID
  34       | ID MINUSMINUS
  35       | expr EQ expr
  36       | expr NEQ expr
  37       | expr LT expr
  38       | expr GT expr
  39       | expr LEQ expr
  40       | expr GEQ expr
  41       | NOT expr
  42       | expr AND expr
  43       | expr OR expr
  44       | LPAREN expr RPAREN
  45       | LBRACK expr_opt COLON expr_opt RBRACK
  46       | ID ASN expr
  47       | LITERAL_INT
  48       | LITERAL_BOOL
  49       | ID

  50  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (50)
	program : .  (1)

	.  reduce 1

	program  goto 3


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : program . func_decl  (2)
	%entry% : '\001' program .  (50)

	ID  shift 4
	$end  reduce 50

	func_decl  goto 5


state 4
	func_decl : ID . LPAREN func_params_opt RPAREN LBRACE stmt_list RBRACE  (3)

	LPAREN  shift 6
	.  error


state 5
	program : program func_decl .  (2)

	.  reduce 2


state 6
	func_decl : ID LPAREN . func_params_opt RPAREN LBRACE stmt_list RBRACE  (3)
	func_params_opt : .  (4)

	INT  shift 7
	BOOL  shift 8
	INT_LIST  shift 9
	BOOL_LIST  shift 10
	RPAREN  reduce 4

	func_params_opt  goto 11
	func_params_list  goto 12
	var_type  goto 13
	list_type  goto 14


state 7
	var_type : INT .  (19)

	.  reduce 19


state 8
	var_type : BOOL .  (20)

	.  reduce 20


state 9
	list_type : INT_LIST .  (22)

	.  reduce 22


state 10
	list_type : BOOL_LIST .  (23)

	.  reduce 23


state 11
	func_decl : ID LPAREN func_params_opt . RPAREN LBRACE stmt_list RBRACE  (3)

	RPAREN  shift 15
	.  error


state 12
	func_params_opt : func_params_list .  (5)
	func_params_list : func_params_list . COMMA var_type ID  (7)

	COMMA  shift 16
	RPAREN  reduce 5


state 13
	func_params_list : var_type . ID  (6)

	ID  shift 17
	.  error


state 14
	var_type : list_type .  (21)

	.  reduce 21


state 15
	func_decl : ID LPAREN func_params_opt RPAREN . LBRACE stmt_list RBRACE  (3)

	LBRACE  shift 18
	.  error


state 16
	func_params_list : func_params_list COMMA . var_type ID  (7)

	INT  shift 7
	BOOL  shift 8
	INT_LIST  shift 9
	BOOL_LIST  shift 10
	.  error

	var_type  goto 19
	list_type  goto 14


state 17
	func_params_list : var_type ID .  (6)

	.  reduce 6


state 18
	func_decl : ID LPAREN func_params_opt RPAREN LBRACE . stmt_list RBRACE  (3)
	stmt_list : .  (8)

	.  reduce 8

	stmt_list  goto 20


state 19
	func_params_list : func_params_list COMMA var_type . ID  (7)

	ID  shift 21
	.  error


state 20
	func_decl : ID LPAREN func_params_opt RPAREN LBRACE stmt_list . RBRACE  (3)
	stmt_list : stmt_list . stmt  (9)

	LPAREN  shift 22
	LBRACE  shift 23
	RBRACE  shift 24
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	RETURN  shift 29
	IF  shift 30
	WHILE  shift 31
	INT  shift 7
	BOOL  shift 8
	INT_LIST  shift 9
	BOOL_LIST  shift 10
	BREAK  shift 32
	CONTINUE  shift 33
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	.  error

	var_type  goto 37
	stmt  goto 38
	expr  goto 39
	list_type  goto 14


state 21
	func_params_list : func_params_list COMMA var_type ID .  (7)

	.  reduce 7


state 22
	expr : LPAREN . expr RPAREN  (44)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	.  error

	expr  goto 40


state 23
	stmt : LBRACE . stmt_list RBRACE  (14)
	stmt_list : .  (8)

	.  reduce 8

	stmt_list  goto 41


state 24
	func_decl : ID LPAREN func_params_opt RPAREN LBRACE stmt_list RBRACE .  (3)

	.  reduce 3


state 25
	expr : LBRACK . expr_opt COLON expr_opt RBRACK  (45)
	expr_opt : .  (24)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	COLON  reduce 24

	expr  goto 42
	expr_opt  goto 43


state 26
	expr : PLUSPLUS . ID  (31)

	ID  shift 44
	.  error


state 27
	expr : MINUSMINUS . ID  (33)

	ID  shift 45
	.  error


state 28
	expr : NOT . expr  (41)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	.  error

	expr  goto 46


state 29
	stmt : RETURN . expr_opt SEMICOLON  (11)
	expr_opt : .  (24)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	SEMICOLON  reduce 24

	expr  goto 42
	expr_opt  goto 47


state 30
	stmt : IF . LPAREN expr RPAREN stmt  (15)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (16)

	LPAREN  shift 48
	.  error


state 31
	stmt : WHILE . LPAREN expr RPAREN stmt  (17)

	LPAREN  shift 49
	.  error


state 32
	stmt : BREAK . SEMICOLON  (12)

	SEMICOLON  shift 50
	.  error


state 33
	stmt : CONTINUE . SEMICOLON  (13)

	SEMICOLON  shift 51
	.  error


state 34
	expr : LITERAL_INT .  (47)

	.  reduce 47


state 35
	expr : LITERAL_BOOL .  (48)

	.  reduce 48


state 36
	expr : ID . PLUSPLUS  (32)
	expr : ID . MINUSMINUS  (34)
	expr : ID . ASN expr  (46)
	expr : ID .  (49)

	ASN  shift 52
	PLUSPLUS  shift 53
	MINUSMINUS  shift 54
	COLON  reduce 49
	SEMICOLON  reduce 49
	RPAREN  reduce 49
	RBRACK  reduce 49
	PLUS  reduce 49
	MINUS  reduce 49
	TIMES  reduce 49
	DIVIDE  reduce 49
	MOD  reduce 49
	AND  reduce 49
	OR  reduce 49
	EQ  reduce 49
	NEQ  reduce 49
	LT  reduce 49
	LEQ  reduce 49
	GT  reduce 49
	GEQ  reduce 49


state 37
	stmt : var_type . ID ASN expr SEMICOLON  (18)

	ID  shift 55
	.  error


state 38
	stmt_list : stmt_list stmt .  (9)

	.  reduce 9


state 39
	stmt : expr . SEMICOLON  (10)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . GT expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GEQ expr  (40)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	SEMICOLON  shift 56
	PLUS  shift 57
	MINUS  shift 58
	TIMES  shift 59
	DIVIDE  shift 60
	MOD  shift 61
	AND  shift 62
	OR  shift 63
	EQ  shift 64
	NEQ  shift 65
	LT  shift 66
	LEQ  shift 67
	GT  shift 68
	GEQ  shift 69
	.  error


state 40
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . GT expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GEQ expr  (40)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)
	expr : LPAREN expr . RPAREN  (44)

	RPAREN  shift 70
	PLUS  shift 57
	MINUS  shift 58
	TIMES  shift 59
	DIVIDE  shift 60
	MOD  shift 61
	AND  shift 62
	OR  shift 63
	EQ  shift 64
	NEQ  shift 65
	LT  shift 66
	LEQ  shift 67
	GT  shift 68
	GEQ  shift 69
	.  error


state 41
	stmt_list : stmt_list . stmt  (9)
	stmt : LBRACE stmt_list . RBRACE  (14)

	LPAREN  shift 22
	LBRACE  shift 23
	RBRACE  shift 71
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	RETURN  shift 29
	IF  shift 30
	WHILE  shift 31
	INT  shift 7
	BOOL  shift 8
	INT_LIST  shift 9
	BOOL_LIST  shift 10
	BREAK  shift 32
	CONTINUE  shift 33
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	.  error

	var_type  goto 37
	stmt  goto 38
	expr  goto 39
	list_type  goto 14


state 42
	expr_opt : expr .  (25)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . GT expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GEQ expr  (40)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	PLUS  shift 57
	MINUS  shift 58
	TIMES  shift 59
	DIVIDE  shift 60
	MOD  shift 61
	AND  shift 62
	OR  shift 63
	EQ  shift 64
	NEQ  shift 65
	LT  shift 66
	LEQ  shift 67
	GT  shift 68
	GEQ  shift 69
	COLON  reduce 25
	SEMICOLON  reduce 25
	RBRACK  reduce 25


state 43
	expr : LBRACK expr_opt . COLON expr_opt RBRACK  (45)

	COLON  shift 72
	.  error


state 44
	expr : PLUSPLUS ID .  (31)

	.  reduce 31


state 45
	expr : MINUSMINUS ID .  (33)

	.  reduce 33


state 46
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . GT expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GEQ expr  (40)
	expr : NOT expr .  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	.  reduce 41


state 47
	stmt : RETURN expr_opt . SEMICOLON  (11)

	SEMICOLON  shift 73
	.  error


state 48
	stmt : IF LPAREN . expr RPAREN stmt  (15)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (16)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	.  error

	expr  goto 74


state 49
	stmt : WHILE LPAREN . expr RPAREN stmt  (17)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	.  error

	expr  goto 75


state 50
	stmt : BREAK SEMICOLON .  (12)

	.  reduce 12


state 51
	stmt : CONTINUE SEMICOLON .  (13)

	.  reduce 13


state 52
	expr : ID ASN . expr  (46)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	.  error

	expr  goto 76


state 53
	expr : ID PLUSPLUS .  (32)

	.  reduce 32


state 54
	expr : ID MINUSMINUS .  (34)

	.  reduce 34


state 55
	stmt : var_type ID . ASN expr SEMICOLON  (18)

	ASN  shift 77
	.  error


state 56
	stmt : expr SEMICOLON .  (10)

	.  reduce 10


state 57
	expr : expr PLUS . expr  (26)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	.  error

	expr  goto 78


state 58
	expr : expr MINUS . expr  (27)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	.  error

	expr  goto 79


state 59
	expr : expr TIMES . expr  (28)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	.  error

	expr  goto 80


state 60
	expr : expr DIVIDE . expr  (29)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	.  error

	expr  goto 81


state 61
	expr : expr MOD . expr  (30)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	.  error

	expr  goto 82


state 62
	expr : expr AND . expr  (42)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	.  error

	expr  goto 83


state 63
	expr : expr OR . expr  (43)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	.  error

	expr  goto 84


state 64
	expr : expr EQ . expr  (35)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	.  error

	expr  goto 85


state 65
	expr : expr NEQ . expr  (36)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	.  error

	expr  goto 86


state 66
	expr : expr LT . expr  (37)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	.  error

	expr  goto 87


state 67
	expr : expr LEQ . expr  (39)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	.  error

	expr  goto 88


state 68
	expr : expr GT . expr  (38)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	.  error

	expr  goto 89


state 69
	expr : expr GEQ . expr  (40)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	.  error

	expr  goto 90


state 70
	expr : LPAREN expr RPAREN .  (44)

	.  reduce 44


state 71
	stmt : LBRACE stmt_list RBRACE .  (14)

	.  reduce 14


state 72
	expr : LBRACK expr_opt COLON . expr_opt RBRACK  (45)
	expr_opt : .  (24)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	RBRACK  reduce 24

	expr  goto 42
	expr_opt  goto 91


state 73
	stmt : RETURN expr_opt SEMICOLON .  (11)

	.  reduce 11


state 74
	stmt : IF LPAREN expr . RPAREN stmt  (15)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (16)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . GT expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GEQ expr  (40)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	RPAREN  shift 92
	PLUS  shift 57
	MINUS  shift 58
	TIMES  shift 59
	DIVIDE  shift 60
	MOD  shift 61
	AND  shift 62
	OR  shift 63
	EQ  shift 64
	NEQ  shift 65
	LT  shift 66
	LEQ  shift 67
	GT  shift 68
	GEQ  shift 69
	.  error


state 75
	stmt : WHILE LPAREN expr . RPAREN stmt  (17)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . GT expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GEQ expr  (40)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	RPAREN  shift 93
	PLUS  shift 57
	MINUS  shift 58
	TIMES  shift 59
	DIVIDE  shift 60
	MOD  shift 61
	AND  shift 62
	OR  shift 63
	EQ  shift 64
	NEQ  shift 65
	LT  shift 66
	LEQ  shift 67
	GT  shift 68
	GEQ  shift 69
	.  error


state 76
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . GT expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GEQ expr  (40)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)
	expr : ID ASN expr .  (46)

	PLUS  shift 57
	MINUS  shift 58
	TIMES  shift 59
	DIVIDE  shift 60
	MOD  shift 61
	AND  shift 62
	OR  shift 63
	EQ  shift 64
	NEQ  shift 65
	LT  shift 66
	LEQ  shift 67
	GT  shift 68
	GEQ  shift 69
	COLON  reduce 46
	SEMICOLON  reduce 46
	RPAREN  reduce 46
	RBRACK  reduce 46


state 77
	stmt : var_type ID ASN . expr SEMICOLON  (18)

	LPAREN  shift 22
	LBRACK  shift 25
	PLUSPLUS  shift 26
	MINUSMINUS  shift 27
	NOT  shift 28
	LITERAL_INT  shift 34
	LITERAL_BOOL  shift 35
	ID  shift 36
	.  error

	expr  goto 94


state 78
	expr : expr . PLUS expr  (26)
	expr : expr PLUS expr .  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . GT expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GEQ expr  (40)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	TIMES  shift 59
	DIVIDE  shift 60
	MOD  shift 61
	COLON  reduce 26
	SEMICOLON  reduce 26
	RPAREN  reduce 26
	RBRACK  reduce 26
	PLUS  reduce 26
	MINUS  reduce 26
	AND  reduce 26
	OR  reduce 26
	EQ  reduce 26
	NEQ  reduce 26
	LT  reduce 26
	LEQ  reduce 26
	GT  reduce 26
	GEQ  reduce 26


state 79
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr MINUS expr .  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . GT expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GEQ expr  (40)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	TIMES  shift 59
	DIVIDE  shift 60
	MOD  shift 61
	COLON  reduce 27
	SEMICOLON  reduce 27
	RPAREN  reduce 27
	RBRACK  reduce 27
	PLUS  reduce 27
	MINUS  reduce 27
	AND  reduce 27
	OR  reduce 27
	EQ  reduce 27
	NEQ  reduce 27
	LT  reduce 27
	LEQ  reduce 27
	GT  reduce 27
	GEQ  reduce 27


state 80
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr TIMES expr .  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . GT expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GEQ expr  (40)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	.  reduce 28


state 81
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr DIVIDE expr .  (29)
	expr : expr . MOD expr  (30)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . GT expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GEQ expr  (40)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	.  reduce 29


state 82
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr MOD expr .  (30)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . GT expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GEQ expr  (40)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	.  reduce 30


state 83
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . GT expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GEQ expr  (40)
	expr : expr . AND expr  (42)
	expr : expr AND expr .  (42)
	expr : expr . OR expr  (43)

	PLUS  shift 57
	MINUS  shift 58
	TIMES  shift 59
	DIVIDE  shift 60
	MOD  shift 61
	EQ  shift 64
	NEQ  shift 65
	LT  shift 66
	LEQ  shift 67
	GT  shift 68
	GEQ  shift 69
	COLON  reduce 42
	SEMICOLON  reduce 42
	RPAREN  reduce 42
	RBRACK  reduce 42
	AND  reduce 42
	OR  reduce 42


state 84
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . GT expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GEQ expr  (40)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)
	expr : expr OR expr .  (43)

	PLUS  shift 57
	MINUS  shift 58
	TIMES  shift 59
	DIVIDE  shift 60
	MOD  shift 61
	AND  shift 62
	EQ  shift 64
	NEQ  shift 65
	LT  shift 66
	LEQ  shift 67
	GT  shift 68
	GEQ  shift 69
	COLON  reduce 43
	SEMICOLON  reduce 43
	RPAREN  reduce 43
	RBRACK  reduce 43
	OR  reduce 43


state 85
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . EQ expr  (35)
	expr : expr EQ expr .  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . GT expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GEQ expr  (40)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	PLUS  shift 57
	MINUS  shift 58
	TIMES  shift 59
	DIVIDE  shift 60
	MOD  shift 61
	LT  shift 66
	LEQ  shift 67
	GT  shift 68
	GEQ  shift 69
	COLON  reduce 35
	SEMICOLON  reduce 35
	RPAREN  reduce 35
	RBRACK  reduce 35
	AND  reduce 35
	OR  reduce 35
	EQ  reduce 35
	NEQ  reduce 35


state 86
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr NEQ expr .  (36)
	expr : expr . LT expr  (37)
	expr : expr . GT expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GEQ expr  (40)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	PLUS  shift 57
	MINUS  shift 58
	TIMES  shift 59
	DIVIDE  shift 60
	MOD  shift 61
	LT  shift 66
	LEQ  shift 67
	GT  shift 68
	GEQ  shift 69
	COLON  reduce 36
	SEMICOLON  reduce 36
	RPAREN  reduce 36
	RBRACK  reduce 36
	AND  reduce 36
	OR  reduce 36
	EQ  reduce 36
	NEQ  reduce 36


state 87
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr LT expr .  (37)
	expr : expr . GT expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GEQ expr  (40)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	PLUS  shift 57
	MINUS  shift 58
	TIMES  shift 59
	DIVIDE  shift 60
	MOD  shift 61
	COLON  reduce 37
	SEMICOLON  reduce 37
	RPAREN  reduce 37
	RBRACK  reduce 37
	AND  reduce 37
	OR  reduce 37
	EQ  reduce 37
	NEQ  reduce 37
	LT  reduce 37
	LEQ  reduce 37
	GT  reduce 37
	GEQ  reduce 37


state 88
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . GT expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr LEQ expr .  (39)
	expr : expr . GEQ expr  (40)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	PLUS  shift 57
	MINUS  shift 58
	TIMES  shift 59
	DIVIDE  shift 60
	MOD  shift 61
	COLON  reduce 39
	SEMICOLON  reduce 39
	RPAREN  reduce 39
	RBRACK  reduce 39
	AND  reduce 39
	OR  reduce 39
	EQ  reduce 39
	NEQ  reduce 39
	LT  reduce 39
	LEQ  reduce 39
	GT  reduce 39
	GEQ  reduce 39


state 89
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . GT expr  (38)
	expr : expr GT expr .  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GEQ expr  (40)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)
